--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.13.4",
     "lodash": "^4.6.1",
     "nodemailer": "^2.3.0",
     "twilio": "^2.9.0"
